--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,33 @@
 * {
   margin: 0;
 }
+
+.main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.h2 {
+  font-size: xx-large;
+  color: rgb(151, 151, 151);
+  padding-bottom: 50px;
+}
+.p {
+  color: rgb(189, 179, 179);
+  padding-bottom: 25px;
+}
+
+.js-btn {
+  background-color: rgb(188, 145, 228);
+  border: none;
+}
+
+.js-title {
+  padding-top: 25px;
+  color: rgb(151, 151, 151);
+}
