--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 .h2 {
   font-size: xx-large;
   color: rgb(151, 151, 151);
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 .p {
   color: rgb(189, 179, 179);
@@ -25,6 +25,7 @@
 .js-btn {
   background-color: rgb(188, 145, 228);
   border: none;
+  color: blueviolet;
 }
 
 .js-title {
